<resources>

    <string name="app_name">SimNote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Simple Note</string>
    <string name="cancel">Cancel</string>
    <string name="fontsize">FontSize</string>
    <string name="alpha">Alpha</string>
    <string name="align">Align</string>
    <string name="stretch">Stretch</string>
    <string name="type">Type</string>
    <string name="bitmap">Bitmap</string>
    <string name="text">Text</string>
    <string name="polygon">Polygon</string>
    <string name="draw">Draw</string>
    <string name="rotation">Rotation</string>
    <string name="zoom">Zoom</string>
    <string name="linked">Linked</string>
    <string name="width">Width</string>
    <string name="Height">Height</string>
    <string name="no_player">No partner logged in!</string>
    <string name="player_list">Partner list:</string>
    <string name="invite">Invite</string>
    <string name="invite_you">invite you!</string>
    <string name="message">Message</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="line_size">Line size</string>
    <string name="pict_Source">Picture categories</string>
    <string name="test">It is a simple notation creator for creating memo or report of meetings with picture, texts, paints and vector graphics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new">New</string>
    <string name="menu_append">Append note</string>
    <string name="menu_export">Export to Html</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_list">Partners</string>
    <string name="net_error">Error access server:</string>
    <string name="user_error">Username x already in use!</string>
    <string name="net_success">Login success!</string>
    <string name="name_error">Please change your nick name in settings!</string>
    <string name="already_error">You are already logged in!</string>
    <string name="first_login">First you must login!"</string>
    <string name="send">Send</string>
    <string name="project_dir">SimpleNotes</string>
    <string name="invite_accept"> accept your invitation!</string>
    <string name="update"> update items!</string>
    <string name="paint">Paint</string>
    <string name="vector">Vector</string>
    <string name="html_exported">exported!</string>
    <string name="density">Density</string>
    <string name="none">None</string>
    <string name="select">Select</string>
    <string name="move">Move</string>
    <string name="rotate">Rotation</string>
    <string name="resize">Resize</string>
    <string name="hand_draw">Paint</string>
    <string name="poly_draw">Vector</string>
    <string name="hidden">Hidden</string>

</resources>